# food-delivery-redis-retail-search

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
scripts/: benchmark_search.py
src/api/: main.py  routes.py
src/core/: config.py
src/data/: default_synonyms.json  dishes.py  food_index.py  redis_client.py
src/search/: autocomplete.py  dish_text.py  embeddings.py  hybrid.py  synonyms.py
src/seed/: catalog.py
static/: app.css
templates/: index.html
tests/: test_smoke.py
